--- a/website/faq.html
+++ b/website/faq.html
@@ -10,6 +10,7 @@
 <!--<![endif]-->
 <head>
 <title>Pseudo Dojo</title>
+<meta charset="utf-8"/>
 <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -116,9 +117,8 @@ We are looking at the possibility to also provide them in the psml format.<BR />
 Yes, this is another project we are finishing at the moment.<BR />
 Most of the current PBE inputs also generate well using the fully relativistic version of ONCVPSP.<BR />
 When we have finished the final polishing we will also provide the last tuned special cases.<BR />
-</div>
-
-  </aside>
+</lu>
+</aside>
 </div>
 </div>
 
