--- a/website/about.html
+++ b/website/about.html
@@ -1,3 +1,42 @@
+<!DOCTYPE html>
+<!--[if IE 7]>
+<html class="ie ie7" lang="en-US">
+<![endif]-->
+<!--[if IE 8]>
+<html class="ie ie8" lang="en-US">
+<![endif]-->
+<!--[if !(IE 7) | !(IE 8)  ]><!-->
+<html lang="en-US">
+<!--<![endif]-->
+<head>
+<title>Pseudo Dojo</title>
+<meta charset="utf-8"/>
+<link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+<div class="wrapper">
+<div class="table">
+  <aside class="infobox">
+    <div class="intro">
+      <h1 class="logo"><a href="index.html" title="The Pseudo Dojo">The Pseudo Dojo</a></h1>
+    </div>
+    <div class="download_button">
+     About
+    </div>
+    <div class="menubar">
+      <div class="menutext">
+        <p>
+          <a href="index.html"><span>Home</span></a>
+          <a href="faq.html"><span>F.A.Q.</span></a>
+          <a href="contribute.html"><span>Contribute</span></a>
+          <span style="padding-left: 6em">
+          <span><a href="about.html">About</a></span></span>
+        </p>
+      </div>
+    </div>
+
+<lu class="generaltext">
 <H1>About PseudoDojo</H1>
 The PseudoDojo.org website gives access to the latest released version of the pseudopotentials of the PseudoDojo project.<BR />
 The PseudoDojo project is hosted on <a href="https://github.com/gmatteo/pseudo_dojo">github</a>. It is a python package to develop, test and store pseudo potentials.<BR />
@@ -19,6 +58,10 @@ Matteo Giantomassi<BR />
 Michiel J. van Setten<BR />
 Gian-Marco Rignanese<BR />
 Jean-Michel Beuken
+</lu>
+</aside>
+</div>
+</div>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -30,5 +73,6 @@ Jean-Michel Beuken
   ga('send', 'pageview');
 
 </script>
+
 </body>
 </html>
