--- a/website/contribute.html
+++ b/website/contribute.html
@@ -1,4 +1,43 @@
-<h1>Contributing to the PseudoDojo project.</h1>
+<!DOCTYPE html>
+<!--[if IE 7]>
+<html class="ie ie7" lang="en-US">
+<![endif]-->
+<!--[if IE 8]>
+<html class="ie ie8" lang="en-US">
+<![endif]-->
+<!--[if !(IE 7) | !(IE 8)  ]><!-->
+<html lang="en-US">
+<!--<![endif]-->
+<head>
+<title>Pseudo Dojo</title>
+<meta charset="utf-8"/>
+<link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+<div class="wrapper">
+<div class="table">
+  <aside class="infobox">
+    <div class="intro">
+      <h1 class="logo"><a href="index.html" title="The Pseudo Dojo">The Pseudo Dojo</a></h1>
+    </div>
+    <div class="download_button">
+     Contributing
+    </div>
+    <div class="menubar">
+      <div class="menutext">
+        <p>
+          <a href="index.html"><span>Home</span></a>
+          <a href="faq.html"><span>F.A.Q.</span></a>
+          <a href="contribute.html"><span>Contribute</span></a>
+          <span style="padding-left: 6em">
+          <span><a href="about.html">About</a></span></span>
+        </p>
+      </div>
+    </div>
+
+<lu class="generaltext">
+      <h1>Contributing to the PseudoDojo project.</h1>
 
 <p>If you would like to contribute to the PseudoDojo project please visit the <a href="https://github.com/gmatteo/pseudo_dojo">github repository</a>.<BR />
 Fork the project and commit your contributions.<BR />
@@ -9,3 +48,25 @@ We cannot accept code additions without unittests.</p>
 If possible try to perform the tests that are already present.<BR />
 Some tests, like the Delta gauge, require all electron reference data that are only available for specific functionals, others don't.
 </p>
+
+</lu>
+</aside>
+</div>
+</div>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97858927-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+</body>
+</html>
+
+
+
