don't click Oganesson, really don't

--- a/website/index.html
+++ b/website/index.html
@@ -1543,7 +1543,7 @@ if (localStorage.getItem('selectedFMT')) {
       <div class="name">Tennessine</div>
     </div>
   </div>
-  <div class="plugin bg_unknown 118_Og">
+  <div class="plugin bg_unknown 118_Og" onclick="chaos()">
     <div class="element">Og</div>
     <div class="empty"></div>
     <div class="name-wrap">
