--- a/website/faq.html
+++ b/website/faq.html
@@ -69,23 +69,32 @@ The numbers in the lower right corner are the results of various tests performed
 
 <h2>&#9670; How do I cite the PseudoDojo?</h2>
 
-The fully detailed paper on the pseudo dojo is still in preparation.<BR />
-For the moment you can cite:<BR />
+A preprint of a detailed paper on the pseudo dojo and the NC pseudopotentials has just been released on arxiv:<BR />
+<blockquote>
+The PseudoDojo: Training and grading a 85 element optimized norm-conserving pseudopotential table<BR />
+M. J. van Setten, M. Giantomassi, E. Bousquet, M. J. Verstraete, D. R. Hamann, X. Gonze, G.-M. Rignanese  <BR />
+<a href="https://arxiv.org/abs/1710.10138">arxiv:1710.10138</a>
+</blockquote>
+An important paper concerning the delta gauge is:
 <blockquote>
 Reproducibility in density functional theory calculations of solids.<BR />
-K. Lejaeghere et. all, Science  25 Mar 2016, Vol. 351, Issue 6280, <a href='https://dx.doi.org/10.1126/science.aad3000'>10.1126/science.aad3000</a>
+K. Lejaeghere et. all, Science  25 Mar 2016, Vol. 351, Issue 6280 <BR />
+<a href='https://dx.doi.org/10.1126/science.aad3000'>10.1126/science.aad3000</a>
 </blockquote>
 When using ONCVPSP type pseudo potentials please cite:<BR />
 <blockquote>
 Optimized norm-conserving Vanderbilt pseudopotentials<BR />
-D. R. Hamann, Phys. Rev. B 88, 085117 <a href='https://doi.org/10.1103/PhysRevB.88.085117'>10.1103/PhysRevB.88.085117</a>
+D. R. Hamann, Phys. Rev. B 88, 085117<BR />
+<a href='https://doi.org/10.1103/PhysRevB.88.085117'>10.1103/PhysRevB.88.085117</a>
 </blockquote>
-When using PAW type pseudo potentials please cite:<BR />
+When using PAW type pseudopotentials please cite:<BR />
 <blockquote>
 Generation of Projector Augmented-Wave atomic data: A 71 element validated table in the XML format.<BR />
-F. Jollet, M. Torrent, and Holzwarth, Computer Physics Communications 185, 1246 <a href="https://doi.org/10.1016/j.cpc.2013.12.023">10.1016/j.cpc.2013.12.023</a>
+F. Jollet, M. Torrent, and Holzwarth, Computer Physics Communications 185, 1246<BR />
+<a href="https://doi.org/10.1016/j.cpc.2013.12.023">10.1016/j.cpc.2013.12.023</a>
 </blockquote>
 
+<a href="pseudo-dojo.bib">bibtex entries</a>
 
 <H1>Concerning the ONCVPSP pseudopotentials</H1>
 
