website and unit test fix

--- a/website/index.html
+++ b/website/index.html
@@ -140,9 +140,9 @@ Format
 <td>
 <div id="TYP-box" class="styled-longselect" onchange="load_set_info();">
   <select id="TYP" onchange="javascript: dynamicdropdown(this.options[this.selectedIndex].value);">
-    <option value="nc-sr" selected>NC (ONCVPSP v0.3)</option>
-    <option value="nc-sr-04">NC (ONCVPSP v0.4)</option>
-<!--  <option value="nc-soc">NC + SOC (ONCVPSP v0.3)</option> -->
+    <option value="nc-sr-04" selected>NC (ONCVPSP v0.4)</option>
+    <option value="nc-sr" >NC (ONCVPSP v0.3)</option>
+    <!--  <option value="nc-soc">NC + SOC (ONCVPSP v0.3)</option> -->
     <option value="paw">PAW (JTH v1.0)</option>
   </select>
 </div>
