more website updates

--- a/website/about.html
+++ b/website/about.html
@@ -44,14 +44,18 @@ Previous versions can be found in the git repository.<BR />
 
 <P> The web interface provides various files:</P>
 <ul>
-<li><b>.psp8</b>   : (NC) the pseudo in the psp8 format (abinit)</li>
-<li><b>.upf</b>    : (NC) the pseudoo in the upf format (quantum esperesso)</li>
-<li><b>.upf</b>    : (PAW) the paw dataset in xml format (abinit)</li>
-<li><b>.html</b>   : (NC) the test report of the pseudo as a static html version of the dojo report jupyter notebook.</li>
-<li><b>.djrepo</b> : (NC) the test report of the pseudo as a json document.</li>
+<li><b>psp8</b>   : (NC) the pseudo in the psp8 format (abinit)</li>
+<li><b>upf</b>    : (NC) the pseudoo in the upf format (quantum esperesso)</li>
+<li><b>psml</b>   : (NC) the pseudoo in the psml format (siesta)</li>
+<li><b>xml</b>    : (PAW) the paw dataset in xml format (abinit)</li>
+<li><b>html</b>   : (NC) the test report of the pseudo as a static html version of the dojo report jupyter notebook.</li>
+<li><b>djrepo</b> : (NC) the test report of the pseudo as a json document.</li>
 </ul>
 
-<P> The current version provided at this web interface is version 0.3: ONCVPSP_PDv0.3 in the git repository.</P>
+<P> The current version provided at this web interface are<BR />
+ version 0.4: ONCVPSP_PDv0.4 in the git repository.<BR />
+ version 0.3: ONCVPSP_PDv0.3 in the git repository.<BR />
+</P>
 
 <H1>Contributors Pseudo Dojo</H1>
 Matteo Giantomassi<BR />
