plt.tight_layout

--- a/website/about.html
+++ b/website/about.html
@@ -61,7 +61,9 @@ Previous versions can be found in the git repository.<BR />
 Matteo Giantomassi<BR />
 Michiel J. van Setten<BR />
 Gian-Marco Rignanese<BR />
-Jean-Michel Beuken
+Jean-Michel Beuken<BR />
+Eric Bousquet
+
 </lu>
 </aside>
 </div>
