--- a/website/faq.html
+++ b/website/faq.html
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-< class="generaltext">
+<lu class="generaltext">
 <h1>General</h1>
 
 <h2>&#9670; What are all these numbers?</h2>
