--- a/website/index.html
+++ b/website/index.html
@@ -55,6 +55,9 @@
   })();
 </script-->
 
+<div id="warning_box">
+</div>
+
 <script src="js/dojo-tools.js">
 </script>
 
@@ -141,6 +144,7 @@ Format
 <div id="TYP-box" class="styled-longselect" onchange="load_set_info();">
   <select id="TYP" onchange="javascript: dynamicdropdown(this.options[this.selectedIndex].value);">
     <option value="nc-sr-04" selected>NC (ONCVPSP v0.4)</option>
+    <option value="nc-sr-04_3+">NC 3+ (ONCVPSP v0.4)</option>
     <option value="nc-sr" >NC (ONCVPSP v0.3)</option>
     <!--  <option value="nc-soc">NC + SOC (ONCVPSP v0.3)</option> -->
     <option value="paw">PAW (JTH v1.0)</option>
