--- a/website/faq.html
+++ b/website/faq.html
@@ -75,6 +75,7 @@ The PseudoDojo: Training and grading a 85 element optimized norm-conserving pseu
 M. J. van Setten, M. Giantomassi, E. Bousquet, M. J. Verstraete, D. R. Hamann, X. Gonze, G.-M. Rignanese,
     Computer Physics Communications 2018 in press<BR />
 <a href="https://doi.org/10.1016/j.cpc.2018.01.012">10.1016/j.cpc.2018.01.012</a>
+<a href="https://arxiv.org/abs/1710.10138">arxiv.org:1710.10138</a>
 
 </blockquote>
 
