--- a/website/faq.html
+++ b/website/faq.html
@@ -74,7 +74,7 @@ The numbers in the lower right corner are the results of various tests performed
 The PseudoDojo: Training and grading a 85 element optimized norm-conserving pseudopotential table<BR />
 M. J. van Setten, M. Giantomassi, E. Bousquet, M. J. Verstraete, D. R. Hamann, X. Gonze, G.-M. Rignanese,
     Computer Physics Communications 2018 in press<BR />
-<a href="https://doi.org/10.1016/j.cpc.2018.01.012">10.1016/j.cpc.2018.01.012</a>
+<a href="https://doi.org/10.1016/j.cpc.2018.01.012">10.1016/j.cpc.2018.01.012</a><BR />
 <a href="https://arxiv.org/abs/1710.10138">arxiv.org:1710.10138</a>
 
 </blockquote>
