paper list html page

--- a/website/about.html
+++ b/website/about.html
@@ -30,8 +30,7 @@
           <a href="index.html"><span>Home</span></a>
           <a href="faq.html"><span>F.A.Q.</span></a>
           <a href="contribute.html"><span>Contribute</span></a>
-          <span style="padding-left: 6em">
-          <span><a href="about.html">About</a></span></span>
+          <span><a href="paperlist.html">Papers</a></span>
         </p>
       </div>
     </div>
