--- a/website/contribute.html
+++ b/website/contribute.html
@@ -29,8 +29,8 @@
         <p>
           <a href="index.html"><span>Home</span></a>
           <a href="faq.html"><span>F.A.Q.</span></a>
-          <a href="contribute.html"><span>Contribute</span></a>
-          <span style="padding-left: 6em">
+          <a href="paperlist.html"><span>Papers</span></a>
+          <span style="padding-left: 7em">
           <span><a href="about.html">About</a></span></span>
         </p>
       </div>
