--- a/website/faq.html
+++ b/website/faq.html
@@ -28,9 +28,9 @@
       <div class="menutext">
         <p>
           <a href="index.html"><span>Home</span></a>
-          <a href="faq.html"><span>F.A.Q.</span></a>
           <a href="contribute.html"><span>Contribute</span></a>
-          <span style="padding-left: 6em">
+          <a href="paperlist.html"><span>Papers</span></a>
+          <span style="padding-left: 5em">
           <span><a href="about.html">About</a></span></span>
         </p>
       </div>
