--- a/website/index.html
+++ b/website/index.html
@@ -90,10 +90,10 @@
     <div class="menubar">
       <div class="menutext">
         <p>
-          <a href="index.html"><span>Home</span></a>
           <a href="faq.html"><span>F.A.Q.</span></a>
           <a href="contribute.html"><span>Contribute</span></a>
-          <span style="padding-left: 6em">
+          <a id='papers' href="paperlist.html"><span>Papers</span></a>
+          <span style="padding-left: 5em">
           <span><a href="about.html">About</a></span></span>
         </p>
       </div>
