paper list html page

--- a/website/faq.html
+++ b/website/faq.html
@@ -73,7 +73,7 @@ The numbers in the lower right corner are the results of various tests performed
 <blockquote>
 The PseudoDojo: Training and grading a 85 element optimized norm-conserving pseudopotential table<BR />
 M. J. van Setten, M. Giantomassi, E. Bousquet, M. J. Verstraete, D. R. Hamann, X. Gonze, G.-M. Rignanese,
-    Computer Physics Communications 2018 in press<BR />
+    Computer Physics Communications 226, 39-54 2018<BR />
 <a href="https://doi.org/10.1016/j.cpc.2018.01.012">10.1016/j.cpc.2018.01.012</a><BR />
 <a href="https://arxiv.org/abs/1710.10138">arxiv.org:1710.10138</a>
 
@@ -96,8 +96,8 @@ D. R. Hamann, Phys. Rev. B 88, 085117<BR />
       When using PSML format pseudo potentials please cite:<BR />
 <blockquote>
 The PSML format and library for norm-conserving pseudopotential data curation and interoperability<BR />
-A. García, M. Verstraete, Y. Pouillon, J. Junquera, arXiv:1707.08938<BR />
-<a href='https://arxiv.org/abs/1707.08938'>arXiv:1707.08938</a>
+A. García, M. Verstraete, Y. Pouillon, J. Junquera, Computer Physics Communications 227, 51-71 2018<BR />
+<a href='https://doi.org/10.1016/j.cpc.2018.02.011'>10.1016/j.cpc.2018.02.011</a>
 </blockquote>
 
     When using PAW type pseudopotentials please cite:<BR />
