--- a/website/about.html
+++ b/website/about.html
@@ -75,6 +75,31 @@ Previous versions can be found in the git repository.<BR />
 </div>
 </div>
 
+<script type="text/javascript" language="javascript">
+<!--
+// Email obfuscator script 2.1 by Tim Williams, University of Arizona
+// Random encryption key feature coded by Andrew Moulden
+// This code is freeware provided these four comment lines remain intact
+// A wizard to generate this code is at http://www.jottings.com/obfuscator/
+{ coded = "gyKWydT.o74Pd88d4@xKTcxo7y4.hd"
+  key = "759T0NGqdsyKjorHngtOE1up2h3MUASRafzlXZFPeIicLv4w8mC6xYBWDbQVJk"
+  shift=coded.length
+  link=""
+  for (i=0; i<coded.length; i++) {
+    if (key.indexOf(coded.charAt(i))==-1) {
+      ltr = coded.charAt(i)
+      link += (ltr)
+    }
+    else {
+      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+      link += (key.charAt(ltr))
+    }
+  }
+document.write("<a href='mailto:"+link+"'>contact us</a>")
+}
+//-->
+</script><noscript>Sorry, you need Javascript for this.</noscript>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
