--- a/website/paperlist.html
+++ b/website/paperlist.html
@@ -70,7 +70,39 @@ function includeHTML() {
 <lu class="generaltext">
 
 <h1>Publications using PseudoDojo Potentials</h1>
+  This page lists the published papers that we know of reporting calculations performed using PseudoDojo
+  pseudopotentials. If you have a paper using the pseudopotentials just send us the DOI and we will add it.
 
+<script type="text/javascript" language="javascript">
+<!--
+// Email obfuscator script 2.1 by Tim Williams, University of Arizona
+// Random encryption key feature coded by Andrew Moulden
+// This code is freeware provided these four comment lines remain intact
+// A wizard to generate this code is at http://www.jottings.com/obfuscator/
+{ coded = "gyKWydT.o74Pd88d4@xKTcxo7y4.hd"
+  key = "759T0NGqdsyKjorHngtOE1up2h3MUASRafzlXZFPeIicLv4w8mC6xYBWDbQVJk"
+  shift=coded.length
+  link=""
+  for (i=0; i<coded.length; i++) {
+    if (key.indexOf(coded.charAt(i))==-1) {
+      ltr = coded.charAt(i)
+      link += (ltr)
+    }
+    else {
+      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+      link += (key.charAt(ltr))
+    }
+  }
+document.write("<a href='mailto:"+link+"'>contact us</a>")
+}
+//-->
+</script><noscript>Sorry, you need Javascript on to email me.</noscript>
+
+
+
+<center>
+<div> <img src="year.png"></div>
+</center>
 <div w3-include-html="papers.html"></div>
 </lu>
 </aside>
