minor bug fix website, keeping the selected xc on changing page

--- a/website/index.html
+++ b/website/index.html
@@ -127,7 +127,7 @@ Format
 </div>
 </td>
 <td>
-<div class="styled-select" onchange="localStorage.setItem('selectedACC', document.getElementById('XCF').value); load_set_info(animate=0);">
+<div class="styled-select" onchange="localStorage.setItem('selectedXCF', document.getElementById('XCF').value); load_set_info(animate=0);">
     <select id="XCF" >
     </select>
 </div>
