minor bug fix website, keeping the selected xc on changing page

--- a/website/faq.html
+++ b/website/faq.html
@@ -68,14 +68,13 @@ The numbers in the lower right corner are the results of various tests performed
  </Table>
 
 <h2>&#9670; How do I cite the PseudoDojo?</h2>
-
-    A preprint of a detailed paper on the pseudo dojo and the NC pseudopotentials has just been released on arxiv:<BR />
+A detailed paper on the pseudo dojo and the NC pseudopotentials has been published in Computer Physics Communications:<BR />
 <blockquote>
 The PseudoDojo: Training and grading a 85 element optimized norm-conserving pseudopotential table<BR />
 M. J. van Setten, M. Giantomassi, E. Bousquet, M. J. Verstraete, D. R. Hamann, X. Gonze, G.-M. Rignanese,
-    Computer Physics Communications 226, 39-54 2018<BR />
+    Computer Physics Communications 226, 39-54 (2018)<BR />
 <a href="https://doi.org/10.1016/j.cpc.2018.01.012">10.1016/j.cpc.2018.01.012</a><BR />
-<a href="https://arxiv.org/abs/1710.10138">arxiv.org:1710.10138</a>
+<a href="https://arxiv.org/abs/1710.10138">arxiv preprint</a>
 
 </blockquote>
 
@@ -89,21 +88,21 @@ K. Lejaeghere et. all, Science  25 Mar 2016, Vol. 351, Issue 6280 <BR />
       When using ONCVPSP type pseudo potentials please cite:<BR />
 <blockquote>
 Optimized norm-conserving Vanderbilt pseudopotentials<BR />
-D. R. Hamann, Phys. Rev. B 88, 085117<BR />
+D. R. Hamann, Phys. Rev. B 88, 085117 (2013)<BR />
 <a href='https://doi.org/10.1103/PhysRevB.88.085117'>10.1103/PhysRevB.88.085117</a>
 </blockquote>
 
       When using PSML format pseudo potentials please cite:<BR />
 <blockquote>
 The PSML format and library for norm-conserving pseudopotential data curation and interoperability<BR />
-A. García, M. Verstraete, Y. Pouillon, J. Junquera, Computer Physics Communications 227, 51-71 2018<BR />
+A. García, M. Verstraete, Y. Pouillon, J. Junquera, Computer Physics Communications 227, 51-71 (2018)<BR />
 <a href='https://doi.org/10.1016/j.cpc.2018.02.011'>10.1016/j.cpc.2018.02.011</a>
 </blockquote>
 
     When using PAW type pseudopotentials please cite:<BR />
 <blockquote>
 Generation of Projector Augmented-Wave atomic data: A 71 element validated table in the XML format.<BR />
-F. Jollet, M. Torrent, and Holzwarth, Computer Physics Communications 185, 1246<BR />
+F. Jollet, M. Torrent, and Holzwarth, Computer Physics Communications 185, 1246 (2013)<BR />
 <a href="https://doi.org/10.1016/j.cpc.2013.12.023">10.1016/j.cpc.2013.12.023</a>
 </blockquote>
 
@@ -142,10 +141,6 @@ Using the <a href="https://launchpad.net/pspgenpatch">psml patch</a> we also gen
       for use with <a href="https://launchpad.net/siesta/psml-support">Siesta</a><BR />
 The psml format is available from version 0.4.<BR />
 
-<h2>&#9670; Will the fully relativistic versions of the potentials be available as well?</h2>
-Yes, this is another project we are finishing at the moment.<BR />
-Most of the current PBE inputs also generate well using the fully relativistic version of ONCVPSP.<BR />
-When we have finished the final polishing we will also provide the last tuned special cases.<BR />
 </lu>
 </aside>
 </div>
