added altmetric donuts to the webpages

--- a/website/faq.html
+++ b/website/faq.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+
+<script type="text/javascript" src="https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js"></script>
+
 <div class="wrapper">
 <div class="table">
   <aside class="infobox">
@@ -69,42 +72,55 @@ The numbers in the lower right corner are the results of various tests performed
 
 <h2>&#9670; How do I cite the PseudoDojo?</h2>
 A detailed paper on the pseudo dojo and the NC pseudopotentials has been published in Computer Physics Communications:<BR />
-<blockquote>
-The PseudoDojo: Training and grading a 85 element optimized norm-conserving pseudopotential table<BR />
-M. J. van Setten, M. Giantomassi, E. Bousquet, M. J. Verstraete, D. R. Hamann, X. Gonze, G.-M. Rignanese,
+
+<table><tr><td width="100" align="center">
+<div class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.cpc.2018.01.012" />
+</td><td>
+    M. J. van Setten, M. Giantomassi, E. Bousquet, M. J. Verstraete, D. R. Hamann, X. Gonze, G.-M. Rignanese,
     Computer Physics Communications 226, 39-54 (2018)<BR />
-<a href="https://doi.org/10.1016/j.cpc.2018.01.012">10.1016/j.cpc.2018.01.012</a><BR />
+<a href="https://doi.org/10.1016/j.cpc.2018.01.012">10.1016/j.cpc.2018.01.012</a>
 <a href="https://arxiv.org/abs/1710.10138">arxiv preprint</a>
+</td></tr></table><BR />
 
-</blockquote>
+An important paper concerning the delta gauge is:
 
-    An important paper concerning the delta gauge is:
-<blockquote>
+<table><tr><td width="100" align="center">
+<div class="altmetric-embed" data-badge-type="donut" data-doi="10.1126/science.aad3000" />
+</td><td>
 Reproducibility in density functional theory calculations of solids.<BR />
 K. Lejaeghere et. all, Science  25 Mar 2016, Vol. 351, Issue 6280 <BR />
 <a href='https://dx.doi.org/10.1126/science.aad3000'>10.1126/science.aad3000</a>
-</blockquote>
+</td></tr></table><BR />
 
       When using ONCVPSP type pseudo potentials please cite:<BR />
-<blockquote>
+
+<table><tr><td width="100" align="center">
+<div class="altmetric-embed" data-badge-type="donut" data-doi="10.1103/PhysRevB.88.085117" />
+</td><td>
 Optimized norm-conserving Vanderbilt pseudopotentials<BR />
 D. R. Hamann, Phys. Rev. B 88, 085117 (2013)<BR />
 <a href='https://doi.org/10.1103/PhysRevB.88.085117'>10.1103/PhysRevB.88.085117</a>
-</blockquote>
+</td></tr></table><BR />
 
       When using PSML format pseudo potentials please cite:<BR />
-<blockquote>
+
+    <table><tr><td width="100" align="center">
+<div class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.cpc.2018.02.011" />
+</td><td>
 The PSML format and library for norm-conserving pseudopotential data curation and interoperability<BR />
 A. García, M. Verstraete, Y. Pouillon, J. Junquera, Computer Physics Communications 227, 51-71 (2018)<BR />
 <a href='https://doi.org/10.1016/j.cpc.2018.02.011'>10.1016/j.cpc.2018.02.011</a>
-</blockquote>
+</td></tr></table><BR />
 
     When using PAW type pseudopotentials please cite:<BR />
-<blockquote>
+
+<table><tr><td width="100" align="center">
+<div class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.cpc.2013.12.023" />
+</td><td>
 Generation of Projector Augmented-Wave atomic data: A 71 element validated table in the XML format.<BR />
 F. Jollet, M. Torrent, and Holzwarth, Computer Physics Communications 185, 1246 (2013)<BR />
 <a href="https://doi.org/10.1016/j.cpc.2013.12.023">10.1016/j.cpc.2013.12.023</a>
-</blockquote>
+</td></tr></table><BR />
 
 <a href="pseudo-dojo.bib">bibtex entries</a>
 
