--- a/website/paperlist.html
+++ b/website/paperlist.html
@@ -73,6 +73,8 @@ function includeHTML() {
   This page lists the published papers that we know of reporting calculations performed using PseudoDojo
   pseudopotentials. If you have a paper using the pseudopotentials just send us the DOI and we will add it.
 
+<script type="text/javascript" src="https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js"></script>
+
 <script type="text/javascript" language="javascript">
 <!--
 // Email obfuscator script 2.1 by Tim Williams, University of Arizona
