--- a/website/faq.html
+++ b/website/faq.html
@@ -71,12 +71,13 @@ The numbers in the lower right corner are the results of various tests performed
  </Table>
 
 <h2>&#9670; How do I cite the PseudoDojo?</h2>
-A detailed paper on the pseudo dojo and the NC pseudopotentials has been published in Computer Physics Communications:<BR />
+A detailed paper on the PseudoDojo and the NC pseudopotentials has been published in Computer Physics Communications:<BR />
 
 <table><tr><td width="100" align="center">
-<div class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.cpc.2018.01.012" />
+<div data-badge-popover="right" class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.cpc.2018.01.012" />
 </td><td>
-    M. J. van Setten, M. Giantomassi, E. Bousquet, M. J. Verstraete, D. R. Hamann, X. Gonze, G.-M. Rignanese,
+    The PseudoDojo: Training and grading a 85 element optimized norm-conserving pseudopotential table<BR />
+    M. J. van Setten, M. Giantomassi, E. Bousquet, M. J. Verstraete, D. R. Hamann, X. Gonze, G.-M. Rignanese<BR />
     Computer Physics Communications 226, 39-54 (2018)<BR />
 <a href="https://doi.org/10.1016/j.cpc.2018.01.012">10.1016/j.cpc.2018.01.012</a>
 <a href="https://arxiv.org/abs/1710.10138">arxiv preprint</a>
@@ -85,40 +86,56 @@ A detailed paper on the pseudo dojo and the NC pseudopotentials has been publish
 An important paper concerning the delta gauge is:
 
 <table><tr><td width="100" align="center">
-<div class="altmetric-embed" data-badge-type="donut" data-doi="10.1126/science.aad3000" />
+<div data-badge-popover="right" class="altmetric-embed" data-badge-type="donut" data-doi="10.1126/science.aad3000" />
 </td><td>
-Reproducibility in density functional theory calculations of solids.<BR />
-K. Lejaeghere et. all, Science  25 Mar 2016, Vol. 351, Issue 6280 <BR />
+Reproducibility in density functional theory calculations of solids<BR />
+K. Lejaeghere et. all<BR />
+Science  25 Mar 2016, Vol. 351, Issue 6280<BR />
 <a href='https://dx.doi.org/10.1126/science.aad3000'>10.1126/science.aad3000</a>
 </td></tr></table><BR />
 
-      When using ONCVPSP type pseudo potentials please cite:<BR />
+The GBRV tests used in the PseudoDojo are introduced in:
 
 <table><tr><td width="100" align="center">
-<div class="altmetric-embed" data-badge-type="donut" data-doi="10.1103/PhysRevB.88.085117" />
+<div data-badge-popover="right" class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.commatsci.2013.08.053" />
+</td><td>
+Pseudopotentials for high-throughput DFT calculations<BR />
+K. F. Garrity, J. W. Bennett, K. M. Rabe, D. Vanderbilt<BR />
+Computational Materials Science 81, 446-452 (2013)<BR />
+<a href='https://dx.doi.org/10.1016/j.commatsci.2013.08.053'>10.1016/j.commatsci.2013.08.053</a>
+</td></tr></table><BR />
+
+
+      When using ONCVPSP type pseudopotentials please cite:<BR />
+
+<table><tr><td width="100" align="center">
+<div data-badge-popover="right" class="altmetric-embed" data-badge-type="donut" data-doi="10.1103/PhysRevB.88.085117" />
 </td><td>
 Optimized norm-conserving Vanderbilt pseudopotentials<BR />
-D. R. Hamann, Phys. Rev. B 88, 085117 (2013)<BR />
+D. R. Hamann<BR />
+Phys. Rev. B 88, 085117 (2013)<BR />
 <a href='https://doi.org/10.1103/PhysRevB.88.085117'>10.1103/PhysRevB.88.085117</a>
 </td></tr></table><BR />
 
-      When using PSML format pseudo potentials please cite:<BR />
+      When using PSML format pseudopotentials please cite:<BR />
 
     <table><tr><td width="100" align="center">
-<div class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.cpc.2018.02.011" />
+<div data-badge-popover="right" class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.cpc.2018.02.011" />
 </td><td>
 The PSML format and library for norm-conserving pseudopotential data curation and interoperability<BR />
-A. García, M. Verstraete, Y. Pouillon, J. Junquera, Computer Physics Communications 227, 51-71 (2018)<BR />
+A. García, M. Verstraete, Y. Pouillon, J. Junquera<BR />
+Computer Physics Communications 227, 51-71 (2018)<BR />
 <a href='https://doi.org/10.1016/j.cpc.2018.02.011'>10.1016/j.cpc.2018.02.011</a>
 </td></tr></table><BR />
 
-    When using PAW type pseudopotentials please cite:<BR />
+    When using PAW type 'pseudopotentials' please cite:<BR />
 
 <table><tr><td width="100" align="center">
-<div class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.cpc.2013.12.023" />
+<div data-badge-popover="right" class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.cpc.2013.12.023" />
 </td><td>
 Generation of Projector Augmented-Wave atomic data: A 71 element validated table in the XML format.<BR />
-F. Jollet, M. Torrent, and Holzwarth, Computer Physics Communications 185, 1246 (2013)<BR />
+F. Jollet, M. Torrent, Holzwarth<BR />
+Computer Physics Communications 185, 1246 (2013)<BR />
 <a href="https://doi.org/10.1016/j.cpc.2013.12.023">10.1016/j.cpc.2013.12.023</a>
 </td></tr></table><BR />
 
@@ -139,7 +156,7 @@ Using these you can generate potentials for most LDA and GGA functionals using <
 We could reuse most of out PBE inputs to generate the PBEsol potentials.<BR />
 Using <a href="http://octopus-code.org/wiki/Libxc_functionals">LibXC</a>, which is linked to ONCVPSP, almost all functionals can be used.
 
-<h2>&#9670; All the ONCVPSP potentials are with non-linear core correction I need some without.</h2>
+    <h2>&#9670; All the ONCVPSP potentials are with non-linear core correction, I need some without.</h2>
 We usually observe better convergence with so, indeed, all are generated with nlcc.<BR />
 If you really need one without take the input from the HTML page on the pseudo (select format : html and click the element).<BR />
 Install <a href="http://www.mat-simresearch.com/">ONCVPSP</a>.
