--- a/website/faq.html
+++ b/website/faq.html
@@ -141,6 +141,13 @@ Computer Physics Communications 185, 1246 (2013)<BR />
 
 <a href="pseudo-dojo.bib">bibtex entries</a>
 
+<h2>&#9670; Can I use the logo in my presentations and grand applications?</h2>
+
+Yes, please feel free to do so, you can download it here:
+
+<table cellpadding="10"><tr><td><img src="logo/logo.svg"></td><td>or</td><td><img src="logo/logo_small.svg"></td></tr></table>
+
+
 <H1>Concerning the ONCVPSP pseudopotentials</H1>
 
 In general, the pseudo's you find here are ready to use.
