--- a/website/faq.html
+++ b/website/faq.html
@@ -59,9 +59,10 @@ The number in the upper right corner of the element boxes (nv) give how many val
 For instance a 4 for Copper means that 1s, 2s, and 2p are frozen in the core but 3s, 3p, 3d, and 4s are treated as valence.<BR />
 <BR />
 The numbers in lower left corner (hints) represent the cutoff hints in Hartree.
-  The exact meaning of the hints can be found in the corresponding paper suggeste below. In general low is a good
-  starting point for you own convergence studies. Normal should be a safe guess for just a quick calculations.
-  High is for testing for convergence.<BR />
+  The exact meaning of the hints can be found in the corresponding <a href="https://doi.org/10.1016/j.cpc.2018.01.012">paper</a> suggested below.
+  In general, low is a good starting point for you own convergence studies.
+  Normal should be a safe guess for just a quick calculation or for automated high-throughput calculations.
+  High is for testing convergence.<BR />
 <BR />
 The numbers in the lower right corner are the results of various tests performed on this pseudo potential.<BR />
   <Table cellpadding="4">
@@ -105,8 +106,7 @@ Computational Materials Science 81, 446-452 (2013)<BR />
 <a href='https://dx.doi.org/10.1016/j.commatsci.2013.08.053'>10.1016/j.commatsci.2013.08.053</a>
 </td></tr></table><BR />
 
-
-      When using ONCVPSP type pseudopotentials please cite:<BR />
+When using ONCVPSP type pseudopotentials please cite:<BR />
 
 <table><tr><td width="100" align="center">
 <div data-badge-popover="right" class="altmetric-embed" data-badge-type="donut" data-doi="10.1103/PhysRevB.88.085117" />
@@ -117,7 +117,7 @@ Phys. Rev. B 88, 085117 (2013)<BR />
 <a href='https://doi.org/10.1103/PhysRevB.88.085117'>10.1103/PhysRevB.88.085117</a>
 </td></tr></table><BR />
 
-      When using PSML format pseudopotentials please cite:<BR />
+When using the PSML format pseudopotentials please cite:<BR />
 
     <table><tr><td width="100" align="center">
 <div data-badge-popover="right" class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.cpc.2018.02.011" />
@@ -128,7 +128,7 @@ Computer Physics Communications 227, 51-71 (2018)<BR />
 <a href='https://doi.org/10.1016/j.cpc.2018.02.011'>10.1016/j.cpc.2018.02.011</a>
 </td></tr></table><BR />
 
-    When using PAW type 'pseudopotentials' please cite:<BR />
+When using the PAW type 'pseudopotentials' please cite:<BR />
 
 <table><tr><td width="100" align="center">
 <div data-badge-popover="right" class="altmetric-embed" data-badge-type="donut" data-doi="10.1016/j.cpc.2013.12.023" />
@@ -140,6 +140,13 @@ Computer Physics Communications 185, 1246 (2013)<BR />
 </td></tr></table><BR />
 
 <a href="pseudo-dojo.bib">bibtex entries</a>
+
+<h2>&#9670; Can I use the logo in my presentations and grand applications?</h2>
+
+Yes, please feel free to do so, you can download it here:
+
+<table cellpadding="10"><tr><td><img src="logo/logo.svg"></td><td>or</td><td><img src="logo/logo_small.svg"></td></tr></table>
+
 
 <H1>Concerning the ONCVPSP pseudopotentials</H1>
 
