tiny bit of documentation

--- a/website/index.html
+++ b/website/index.html
@@ -118,11 +118,11 @@ Format
 <td>
 <div class="styled-longselect" onchange="load_set_info();">
   <select id="TYP" onchange="dynamicdropdown(this.options[this.selectedIndex].value);";>
+    <!--  <option value="name">this is were you add a new table, also add the option to the dynamicdropdown funtion in dojo-tools.js</option> -->
     <option value="nc-sr-04" selected>NC SR (ONCVPSP v0.4)</option>
     <option value="nc-fr-04" >NC FR (ONCVPSP v0.4)</option>
     <option value="nc-sr-04-3plus">NC SR 3+ (ONCVPSP v0.4)</option>
     <option value="nc-sr" >NC SR (ONCVPSP v0.3)</option>
-    <!--  <option value="nc-soc">NC + SOC (ONCVPSP v0.3)</option> -->
     <option value="paw">PAW (JTH v1.0)</option>
   </select>
 </div>
